tests/pos/i15608/bar/Test.scala
package bar

trait MDCAdapter

object ScalaMDCAdapter extends MDCAdapter {
}
