tests/neg/i20245/Messages_1.scala
package effekt
package util

object messages {
  trait ErrorReporter {

  }
}
